fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -463,8 +463,8 @@ body {
 
 @media (min-height: 600px) {
 	.full-image {
-		width: 22em;
-		height: 30em;
+		width: 24em;
+		height: 32em;
 	}
 }
 
